--- a/package.json
+++ b/package.json
@@ -1,66 +1,89 @@
 {
-  "name": "react-native-datepicker",
-  "version": "1.6.0",
-  "description": "react native datePicker component for both Android and IOS, useing DatePikcerAndroid, TimePickerAndroid and DatePickerIOS",
-  "main": "datepicker.js",
-  "scripts": {
-    "start": "node node_modules/react-native/local-cli/cli.js start",
-    "test": "jest --coverage",
-    "coverage": "cat ./coverage/lcov.info | coveralls",
-    "changelog": "conventional-changelog -p angular -i CHANGELOG.md -s",
-    "lint": "eslint ."
+  "_from": "react-native-datepicker",
+  "_id": "react-native-datepicker@1.6.0",
+  "_inBundle": false,
+  "_integrity": "sha1-OkDcmxEgI8SdYLoqB4nUQLfj2Xw=",
+  "_location": "/react-native-datepicker",
+  "_phantomChildren": {},
+  "_requested": {
+    "type": "tag",
+    "registry": true,
+    "raw": "react-native-datepicker",
+    "name": "react-native-datepicker",
+    "escapedName": "react-native-datepicker",
+    "rawSpec": "",
+    "saveSpec": null,
+    "fetchSpec": "latest"
   },
-  "repository": {
-    "type": "git",
-    "url": "git+https://github.com/xgfe/react-native-datepicker.git"
-  },
-  "keywords": [
-    "react-native",
-    "DatePicker"
+  "_requiredBy": [
+    "#USER",
+    "/"
   ],
-  "author": "xgfe",
-  "license": "MIT",
+  "_resolved": "https://registry.npmjs.org/react-native-datepicker/-/react-native-datepicker-1.6.0.tgz",
+  "_shasum": "3a40dc9b112023c49d60ba2a0789d440b7e3d97c",
+  "_spec": "react-native-datepicker",
+  "_where": "/Users/kevintan/viaAmigo",
+  "author": {
+    "name": "xgfe"
+  },
   "bugs": {
     "url": "https://github.com/xgfe/react-native-datepicker/issues"
   },
-  "homepage": "https://github.com/xgfe/react-native-datepicker#readme",
-  "dependencies": {
-    "moment": "2.x.x"
-  },
-  "devDependencies": {
-    "babel-core": "^6.5.2",
-    "babel-eslint": "^7.2.3",
-    "babel-jest": "21.2.0",
-    "babel-preset-react-native": "4.0.0",
-    "coveralls": "^2.11.9",
-    "cz-conventional-changelog": "^1.2.0",
-    "enzyme": "^3.1.0",
-    "enzyme-adapter-react-16": "^1.0.2",
-    "eslint": "^3.19.0",
-    "eslint-plugin-react": "^7.0.1",
-    "inquirer": "^3.0.5",
-    "jest": "21.2.1",
-    "jsdom": "^11.3.0",
-    "jsdom-global": "^3.0.2",
-    "pre-commit": "^1.1.3",
-    "react": "16.0.0-beta.5",
-    "react-dom": "16.0.0-beta.5",
-    "react-native": "0.49.3",
-    "react-test-renderer": "16.0.0-beta.5"
-  },
+  "bundleDependencies": false,
   "config": {
     "commitizen": {
       "path": "./node_modules/cz-conventional-changelog"
     }
   },
-  "jest": {
-    "preset": "react-native",
-    "testPathIgnorePatterns": [
-      "/node_modules/",
-      "tools/"
-    ]
+  "dependencies": {
+    "moment": "2.x.x"
   },
+  "deprecated": false,
+  "description": "react native datePicker component for both Android and IOS, useing DatePikcerAndroid, TimePickerAndroid and DatePickerIOS",
+  "devDependencies": {
+    "babel-core": "^6.5.2",
+    "babel-eslint": "^7.2.3",
+    "babel-preset-react-native": "^1.8.0",
+    "chai": "^3.5.0",
+    "coveralls": "^2.11.9",
+    "cz-conventional-changelog": "^1.1.6",
+    "enzyme": "^2.4.0",
+    "eslint": "^3.19.0",
+    "eslint-plugin-react": "^7.0.1",
+    "istanbul": "^1.0.0-alpha.2",
+    "jsdom": "^9.4.1",
+    "mocha": "^2.5.2",
+    "pre-commit": "^1.1.3",
+    "prop-types": "^15.5.10",
+    "react": "~15.4.0",
+    "react-addons-test-utils": "~15.4.0",
+    "react-dom": "~15.4.0",
+    "react-native": "~0.39.0",
+    "react-native-mock": "^0.2.8",
+    "sinon": "^1.17.4"
+  },
+  "homepage": "https://github.com/xgfe/react-native-datepicker#readme",
+  "keywords": [
+    "react-native",
+    "DatePicker"
+  ],
+  "license": "MIT",
+  "main": "index.js",
+  "name": "react-native-datepicker",
   "pre-commit": [
     "lint"
-  ]
+  ],
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/xgfe/react-native-datepicker.git"
+  },
+  "scripts": {
+    "changelog": "conventional-changelog -p angular -i CHANGELOG.md -s",
+    "coverage": "cat ./coverage/lcov.info | coveralls",
+    "lint": "eslint .",
+    "mocha": "./node_modules/mocha/bin/_mocha ./test/*.test.js --watch",
+    "start": "node node_modules/react-native/local-cli/cli.js start",
+    "test": "node ./node_modules/.bin/istanbul cover ./node_modules/mocha/bin/_mocha ./test/*.test.js"
+  },
+  "version": "1.6.0"
 }
